# Jupyter-Translator

./: LICENSE  README.md  pyproject.toml  requirements.txt
jupyter_translator/: __init__.py  cli.py
